--- a/templates/lightVersion/light_menu.html.twig
+++ b/templates/lightVersion/light_menu.html.twig
@@ -19,21 +19,19 @@
     </div>
 </div>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="collapse navbar-collapse">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="#presentation-section">{{ 'app.light_version.title_section.presentation' | trans }}</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#prerequisites-section">{{ 'app.light_version.title_section.prerequisites' | trans }}</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#objectives-section">{{ 'app.light_version.title_section.objectives' | trans }}</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#activities-section">{{ 'app.light_version.title_section.activities' | trans }}</a>
-            </li>
-        </ul>
-    </div>
+<nav id="student-sidebar" class="light-menu">
+    <ul>
+        <li>
+            <a class="nav-link" href="#presentation-section">{{ 'app.light_version.title_section.presentation' | trans }}</a>
+        </li>
+        <li>
+            <a class="nav-link" href="#prerequisites-section">{{ 'app.light_version.title_section.prerequisites' | trans }}</a>
+        </li>
+        <li>
+            <a href="#objectives-section">{{ 'app.light_version.title_section.objectives' | trans }}</a>
+        </li>
+        <li>
+            <a href="#activities-section">{{ 'app.light_version.title_section.activities' | trans }}</a>
+        </li>
+    </ul>
 </nav>
