--- a/templates/lightVersion/light_presentation.html.twig
+++ b/templates/lightVersion/light_presentation.html.twig
@@ -146,7 +146,7 @@
                             {% if not loop.first %}
                                 ,
                             {% endif %}
-                            {{ teacher.firstname }} {{ teacher.lastname }} {% if teacher.emailVisibility and teacher.email is not null %}(<span class="text-primary">{{ teacher.email }}</span>){% endif %}
+                            {{ teacher.firstname }} {{ teacher.lastname }}
                         {% endif %}
                     {% endfor %}
                 </span>
