--- a/templates/course_info_field/index.html.twig
+++ b/templates/course_info_field/index.html.twig
@@ -23,7 +23,7 @@
                                 formView,
                                 {
                                     'attr' : {
-                                        'data-url' : path('app_admin_course_info_field_edit', { 'id' : field.id }),
+                                        'data-url' : path('app.admin.course_info_field.edit', { 'id' : field.id }),
                                         'id' : 'course-info-field-'~field.id
                                     }
                                 }
