--- a/templates/dashboard/index.html.twig
+++ b/templates/dashboard/index.html.twig
@@ -74,7 +74,7 @@
                         <div class="icon">
                             <i class="fas fa-comment-dots"></i>
                         </div>
-                        <a href="{{ path('app_admin.ask_advice_index') }}" class="small-box-footer">
+                        <a href="{{ path('app.admin.ask_advice.index') }}" class="small-box-footer">
                             {{ 'admin.button.more_info' | trans }}
                             <i class="fas fa-arrow-circle-right"></i>
                         </a>
