--- a/templates/groups/new.html.twig
+++ b/templates/groups/new.html.twig
@@ -1,6 +1,6 @@
 {% extends 'admin_layout.html.twig' %}
 {% set h1 = 'admin.button.add_group' | trans %}
-{% set href = path('app_admin_groups_index') %}
+{% set href = path('app.admin.groups.index') %}
 
 {% block subContent %}
     <div class="card">
