--- a/templates/switch_user/switch_user.html.twig
+++ b/templates/switch_user/switch_user.html.twig
@@ -1,6 +1,6 @@
 {% extends 'admin_layout.html.twig' %}
 {% set h1 = 'app.form.switch_user.title' | trans %}
-{% set href = path('app_admin.dashboard_index') %}
+{% set href = path('app.admin.dashboard.index') %}
 
 {% block subContent %}
     <div class="card card-primary">
