test admin activity mode form

--- a/templates/activity/edit.html.twig
+++ b/templates/activity/edit.html.twig
@@ -1,5 +1,5 @@
 {% extends 'admin_layout.html.twig' %}
-{% set h1 = 'admin.critical_achievement.edit_critical_achievement' | trans %}
+{% set h1 = 'admin.activity.edit_activity' | trans %}
 {% set href = path('app.admin.activity.index') %}
 
 {% block subContent %}
