--- a/templates/structure/edit.html.twig
+++ b/templates/structure/edit.html.twig
@@ -8,8 +8,9 @@
         <!-- form start -->
         {{ form_start(form) }}
         <div class="card-body">
-            {{ form_row(form.code) }}
-            {{ form_row(form.label) }}
+            <div class="text-bold">
+                {{ structure.label }} - {{ structure.code }}
+            </div>
             <div class="custom-control custom-switch">
                 {{ form_widget(form.synchronized) }}
                 {{ form_label(form.synchronized) }}
