--- a/templates/structure/new.html.twig
+++ b/templates/structure/new.html.twig
@@ -12,7 +12,7 @@
                     {{ form_widget(form.synchronized) }}
                     {{ form_label(form.synchronized) }}
                 </div>
-                <button class="btn btn-primary">{{ 'admin.button.save' | trans }}</button>
+                <button type="submit" class="btn btn-primary">{{ 'admin.button.save' | trans }}</button>
             {{ form_end(form) }}
         </div>
     </div>
