courseinfo controllers test

--- a/templates/course_info/prerequisite/prerequisite.html.twig
+++ b/templates/course_info/prerequisite/prerequisite.html.twig
@@ -10,7 +10,7 @@
                     <h3 class="text-blue-title">{{ 'app.prerequisites.view.prerequisites' | trans }}</h3>
                     <button type="button" class="btn button-orange modal-action"
                             data-action-title="{{ 'app.prerequisites.view.add_prerequisite' | trans }}"
-                            data-action-url="{{ path('app.course_info.prerequisite.prerequisite.add', {'id': courseInfo.id }) }}">
+                            data-action-url="{{ path('app.course_info.prerequisite.add', {'id': courseInfo.id }) }}">
                         {{ 'app.prerequisites.view.add_prerequisite' | trans }}
                     </button>
                 </div>
