--- a/templates/course_info/prerequisite/form/prerequisite.html.twig
+++ b/templates/course_info/prerequisite/form/prerequisite.html.twig
@@ -1,5 +1,5 @@
 {{ form_start(form, {'attr': {'class': 'modal-action-form', 'data-action-url':
-    path('app.course_info.prerequisite.prerequisite.add', {'id': courseInfo.id }), 'data-card': 'card-prerequisite'}}) }}
+    path('app.course_info.prerequisite.add', {'id': courseInfo.id }), 'data-card': 'card-prerequisite'}}) }}
 {{ form_errors(form) }}
 <div class="row mt-3">
     <div class="col">
