--- a/assets/scss/light_version.scss
+++ b/assets/scss/light_version.scss
@@ -200,7 +200,7 @@
           color: var(--primary);
           font-weight: bold;
           display: inline-block;
-          width: 1em;
+          min-width: 1em;
         }
       }
 
