--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -144,6 +144,8 @@
                     url,
                     data
                 ).done(function (response) {
+                    let redirect = $(response.content).data('redirect-url');
+                    console.log(redirect);
                     if (Syllabus.handleAjaxResponseModal(response, $modal_app_body)) {
                         $modal_app.modal('hide');
                         if (view)
@@ -153,6 +155,9 @@
                                     $cardBody.html(response["content"]);
                                 }
                             })
+                        }
+                        else if (redirect){
+                            window.location.href = redirect;
                         }
                         else
                         {
