--- a/templates/course_info/view/student_prerequisite.html.twig
+++ b/templates/course_info/view/student_prerequisite.html.twig
@@ -1,14 +1,14 @@
 <section id="prerequisites-section" class="pb-5">
     <div class="student-title">
         <div class="student-img-banner"
-             style="background-image: url('{{ asset('build/images/information_photo.jpg') }}') !important; ">
+             style="background-image: url('{{ asset('build/images/prerequis_photo.png') }}') !important; ">
         </div>
         <div class="student-text-banner">
             {{ 'app.view.student.tabs.prerequisites' | trans }}
         </div>
     </div>
 
-    <div class="student-grid">
+    <div class="student-grid justify-content-center">
         <div class="grid-element grid-2-elements">
             {% if courseInfo.coursePrerequisites is not empty %}
                 <div class="student-subtitle">
