--- a/assets/scss/student_view.scss
+++ b/assets/scss/student_view.scss
@@ -181,7 +181,7 @@
           color: var(--primary);
           font-weight: bold;
           display: inline-block;
-          width: 1em;
+          min-width: 1em;
         }
       }
 
