--- a/assets/scss/_custom.scss
+++ b/assets/scss/_custom.scss
@@ -398,6 +398,14 @@ li.sidebar-footer {
   text-align: center;
 }
 
+.img-summary {
+  padding: 0.5rem;
+  border-radius: 0.25rem;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.075);
+  max-width: 100%;
+  height: auto;
+}
+
 /*
   Carousel
  */
