--- a/templates/course_info/activities/form/add_activity.html.twig
+++ b/templates/course_info/activities/form/add_activity.html.twig
@@ -1,8 +1,8 @@
-<div class="mb-2">
+<div class="mb-2 bg-primary">
     <h5>
         {{ activity.label }}
     </h5>
-    <small>
+    <small class="text-italic">
         {{ activity.description }}
     </small>
 </div>
