--- a/templates/default/credits.html.twig
+++ b/templates/default/credits.html.twig
@@ -51,23 +51,11 @@
                 <div>
                     <p>{{ 'credits.host_description' | trans }}</p>
                 </div>
-            </div>
-            <div class="ml-auto w-25">
-                <div class="border border-primary p-2 mb-4">
-                    <p class="text-bold border-bottom border-primary">
-                        {{ 'credits.rgaa.title' | trans }}
-                    </p>
-                    <p>
-                        {{ 'credits.rgaa.description' | trans }}
-                    </p>
-                </div>
-                <div class="border border-primary p-2">
-                    <p class="text-bold border-bottom border-primary">
-                        {{ 'credits.dpd.title' | trans }}
-                    </p>
-                    <p>
-                        {{ 'credits.dpd.description' | trans }}
-                    </p>
+                <h4 class="mb-3">
+                    <span class="border-bottom border-primary">{{ 'credits.legal_mentions' | trans }}</span>
+                </h4>
+                <div>
+                    <a href="{{ 'credits.legal_mentions_description' | trans }}" target="_blank">{{ 'credits.legal_mentions_description' | trans }}</a>
                 </div>
             </div>
         </div>
