--- a/assets/scss/student_view.scss
+++ b/assets/scss/student_view.scss
@@ -18,6 +18,24 @@
     background-color: $dark-light;
   }
 
+  .icon-20 {
+    width: 20px !important;
+    height: 20px !important;
+    margin-right: 0.5rem !important;
+  }
+
+  .icon-30 {
+    width: 30px;
+    height: 30px;
+    margin-right: 1rem;
+  }
+
+  .icon-40 {
+    width: 40px;
+    height: 40px;
+    margin-right: 1rem;
+  }
+
   #student-sidebar {
     font-size: 0.9rem;
     position: fixed;
@@ -54,28 +72,10 @@
       padding-left: 70px;
     }
 
-    .icon-20 {
-      width: 20px;
-      height: 20px;
-      margin-right: 0.5rem;
-    }
-
-    .icon-30 {
-      width: 30px;
-      height: 30px;
-      margin-right: 1rem;
-    }
-
-    .icon-40 {
-      width: 40px;
-      height: 40px;
-      margin-right: 1rem;
-    }
-
     .student-title {
       width: 100%;
       position: relative;
-      margin-bottom: 2rem;
+      margin-bottom: 1rem;
 
       h1 {
         color: var(--primary);
