--- a/templates/course_info/prerequisite/form/edit_prerequisite.html.twig
+++ b/templates/course_info/prerequisite/form/edit_prerequisite.html.twig
@@ -8,20 +8,44 @@
                 {% if form.description is defined %}
                     {{ form_row(form.description) }}
                 {% endif %}
-                {{ form_row(form.courses) }}
+                <label>{{ "app.prerequisites.form.is_course_associated" | trans }}</label>
+                {{ form_row(form.isCourseAssociated) }}
+                <div id="courses-content" class="d-none">
+                    {{ form_row(form.courses) }}
+                </div>
             </div>
         </div>
     </div>
 </div>
 <div class="d-flex justify-content-center mt-3">
     <button type="submit" class="btn button-orange" id="create_button">
-        {{ 'app.prerequisites.form.add' | trans }}
+        {{ 'app.general.button.edit' | trans }}
     </button>
 </div>
 {{ form_widget(form._token) }}
 {{ form_end(form, {'render_rest': false }) }}
 <script>
+    $('#course_prerequisite_isCourseAssociated').bootstrapToggle();
+
     $(document).ready(function () {
+        displayCoursesContent();
+
+        $(document).on('change', '#course_prerequisite_isCourseAssociated', function () {
+            displayCoursesContent();
+        });
+
+        function displayCoursesContent() {
+            let display = $('#course_prerequisite_isCourseAssociated').closest('div .toggle');
+            if (display.hasClass("off"))
+            {
+                $('#courses-content').addClass('d-none');
+            }
+            else
+            {
+                $('#courses-content').removeClass('d-none');
+            }
+        }
+
         $('form[name="course_prerequisite"]').find('.select2entity').select2entity();
     });
 </script>
