--- a/templates/lightVersion/light_prerequisite.html.twig
+++ b/templates/lightVersion/light_prerequisite.html.twig
@@ -10,11 +10,13 @@
             </div>
             <ul class="light-list list-dotted">
                 {% for prerequisite in courseInfo.coursePrerequisites %}
+                    {% if prerequisite.description %}
                     <li class="ml-2 text-primary">
                         <div class="d-flex flex-column">
                             <span>{{ prerequisite.description | linkify({"attr": {"target": "_blank"}}) | raw }}</span>
                         </div>
                     </li>
+                    {% endif %}
                 {% endfor %}
             </ul>
         {% else %}
