--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -35,6 +35,9 @@
             or app.request.get('_route') == "app.course_info.view.light_version"
         %}
             data-spy="scroll" data-target="#student-sidebar" data-offset="100"
+            {% if app.request.get('_route') == "app.course_info.view.student" %}
+                style="background-color: black !important;"
+            {% endif %}
         {% endif %}
 >
 
